Fixed issue in org.hip.vif.web.tasks.AbstractVIFEventDispatcher, i.e. biblio lookup.